Fix list index out of bounds error, prevent webpage from loading internal server error message.

--- a/static/project1styles.css
+++ b/static/project1styles.css
@@ -1,5 +1,9 @@
 body {
     background-color: #00FFFF;
     text-align: center;
-    padding: 2em;
+    padding-top: 10%;
+}
+h1 {
+    text-align: left;
+    padding-left: 30%;
 }
